# robot_simulator

./: .gitignore  CMakeLists.txt  README.md  changelog
include/robot_sim/common/: any.h  count_time.h  singleton.h
include/robot_sim/core/: dispatch.h  error.h  event.h  module.h  state.h  type.h
include/robot_sim/motion/: motion.h  motion_diff.h  motion_factory.h  motion_impl.h  motion_odom.h  motion_type.h
include/robot_sim/node/: node.h
include/robot_sim/ros/: ros_node.h
include/robot_sim/srv/: robot_bound.h  robot_manage.h
include/robot_sim/var/: var.h  var_common.h  var_const.h  var_object.h
script/: build.sh  install_env.sh  pack_deb.sh  run_node.sh  upload_deb.sh
script/test/: test_file_permission.sh  test_pub.py  test_sub.py
src/: CMakeLists.txt
src/motion/: CMakeLists.txt  motion_diff.cpp  motion_impl.cpp  motion_test.cpp  speed_limiter.cpp  speed_limiter.h
src/node/: CMakeLists.txt  main.cpp  node.cpp
src/ros_node/: CMakeLists.txt  package.xml
src/ros_node/launch/: robot_sim.launch
src/ros_node/msg/: move_cmd.msg  move_feedback.msg
src/ros_node/src/: ros_node.cpp
src/ros_node/srv/: add_robot.srv  del_robot.srv  set_bound.srv  set_pos.srv  set_vel.srv  start.srv
src/srv/: CMakeLists.txt  robot_bound.cpp  robot_manage.cpp  robot_test.cpp
